traversal.snake.Snake.scala.error
Compilation error:
Snake:12: error: ';' expected but '(' found.
                  if((isFacingWall())&&(getDirection()==(Direction.EAST))) {left(); forward(); left(); fonce()} else {right(); forward(); right(); fonce()}: fonce()}}
                                                                                                                                                                  ^